# neuromake

./: .gitignore  LICENSE  MANIFEST.in  Untitled.ipynb  setup.cfg  setup.py  snakefile
config/: ex_ds003988.json  slurm-config.json  sm_config.json
doc/source/: conf.py  index.rst
neuromake/: cli.py  config.py  exceptions.py  utils.py  wildcard.py
neuromake/app/: app.py  samples.py
neuromake/config/: filetypes.json
neuromake/menu/: __init__.py  menu.py  samples.py
neuromake/resources/: bids_info.json  keynames.json
neuromake/tests/bids/ds003988/: L2_Adult_eyetracking.xlsx  L2_Adults_RBQ.tsv  L2_adults_demographics.tsv  README  T1w.json  dir-AP_epi.json  dir-PA_epi.json  dwi.json  task-read_bold.json  task-rest_bold.json  text_data.xlsx
neuromake/utils/: utils.py
tests/: test_app.py  test_menu.py  test_menu_samples.py  test_utils.py  test_wildcard.py  tset_cli.py
tests/bids/ds003988/: .bidsignore  CHANGES  L2_Adults_LHQ.tsv  dataset_description.json
tests/bids/ds003988/sub-01/dwi/: sub-01_acq-multiband_dwi.bvec
tests/bids/ds003988/sub-01/func/: sub-01_task-read_run-1_events.tsv  sub-01_task-read_run-3_events.tsv
tests/bids/ds003988/sub-02/dwi/: sub-02_acq-multiband_dwi.bvec
tests/bids/ds003988/sub-02/func/: sub-02_task-read_run-1_events.tsv  sub-02_task-read_run-2_events.tsv  sub-02_task-read_run-3_events.tsv
tests/bids/ds003988/sub-03/dwi/: sub-03_acq-multiband_dwi.bvec
tests/bids/ds003988/sub-03/func/: sub-03_task-read_run-2_events.tsv  sub-03_task-read_run-3_events.tsv  (+1 more)
tests/config/: ex_ds003988.json  neuromake_test_config.json
(+317 files in other folders)
