[metadata]
name = neuromake
url = http://github.com/UMich-Mind-Lab/neuromake
author = burtonjz
author_email = burtonjz@umich.edu
maintainer = UMich-Mind-Lab
maintainer_email = burtonjz@umich.edu
description = neuromake: additional support constructing snakemake pipelines using BIDS
license = MIT
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
install_requires =
  nibabel>=3.2.1
  pybids>=0.14.0
  PyQt5>=5.15.6
tests_require =
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    neuromake=neuromake.cli:cli

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = neuromake/_version.py
versionfile_build = neuromake/_version.py
tag_prefix =
parentdir_prefix =
